Test fixed and comments added